# open-email-agent

./: .env.example  .gitignore  API_SERVER_STARTUP.md  CLAUDE.md  KNOWLEDGE_BASE_README.md  PROJECT_STRUCTURE.md  README.md  README_CN.md  REASONING_TOOL_CALLS_FIX.md  address_book.json  email_tools.py  email_utils.py  imap_utils.py  install_deps.sh  prompt.py  pyproject.toml  test.py  test_agent_init.py  test_api_server_startup.py  test_imports.py  test_middleware_simple.py  test_reasoning_tool_calls.py  utils.py
deepagents/: graph.py
deepagents/backends/: protocol.py
deepagents/middleware/: filesystem.py  memory.py  parse_reasoning_tool_calls.py  patch_tool_message_ids.py  skills.py  subagents.py
lib/: __init__.py  address_book.json  document_parser.py  email_tools.py  prompt.py  test.py  utils.py
web_app/: .env.example  .gitignore  AGENT_FIX.md  ARCHITECTURE.md  BANNER.txt  COMPLETE_FIX_SUMMARY.md  FEATURES.md  FONT_COLOR_FIX.md  INDEX.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md  SETTINGS_UPDATE.md  SETUP.md  VIRTUAL_ENV_FIX.md  start.sh  test_backend.py
web_app/backend/: api_server.py  requirements.txt
web_app/frontend/: index.html  package-lock.json  package.json  vite.config.js
web_app/frontend/src/: App.tsx  index.css  vite-env.d.ts
web_app/frontend/src/components/: ChatListSidebar.tsx  ChatMessage.tsx  Layout.tsx  StatusBar.tsx  TempFileUploader.tsx  Toast.tsx
web_app/frontend/src/contexts/: EmailContext.tsx  ToastContext.tsx
web_app/frontend/src/lib/: ChatSessionStorage.ts  MessageStorage.ts  WebSocketManager.ts  api.ts  websocket.ts
web_app/frontend/src/pages/: ChatPage.tsx  ContactsPage.tsx  EmailPage.tsx  EmailPageWebSocket.tsx  KnowledgePage.tsx  SettingsPage.tsx
